--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "start-dev": "nodemon index.js",
+    "migrate": "npx sequelize-cli db:migrate",
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && yarn migrate",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "pretest": "cross-env NODE_ENV=test yarn migrate:reset"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +21,7 @@
     "sequelize": "^6.3.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "jest": "^26.1.0",
     "pg": "^8.2.2",
     "pg-hstore": "^2.3.3",
