--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "sequelize": "^6.3.0"
+    "sequelize": "^6.3.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
